syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.edu";
option java_outer_classname = "KeyManagerGrpc";
option objc_class_prefix = "HLW";

package br.com.zup.edu;

service ChavePixUnicaConsultarService {
  rpc consultarUnica (ChavePixUnicaConsultarRequest) returns (ChavePixUnicaConsultarResponse) {}
}

service ChavePixTodasConsultarService {
  rpc consultarTodas (ChavePixTodasConsultarRequest) returns (ChavePixTodasConsultarResponse) {}
}

service ChavePixCadastrarService {
  rpc cadastrar (ChavePixCadastrarRequest) returns (ChavePixCadastrarResponse) {}
}

service ChavePixRemoverService {
  rpc remover (ChavePixRemoverRequest) returns (ChavePixRemoverResponse) {}
}

//---------------------------------------------------------

message ChavePixTodasConsultarRequest {
  string clienteId = 1;
}

message ChavePixTodasConsultarResponse {
  message ChavePix {
    string pixId = 1;
    string tipoChave = 2;
    string chave = 3;
    string tipoConta = 4;
    string dataRegistro = 5;
  }

  string clienteId = 1;
  repeated ChavePix chaves = 2;
}

//---------------------------------------------------------

enum TipoChave {
  CHAVE_DESCONHECIDA = 0;
  CPF = 1;
  CNPJ = 2;
  CELULAR = 3;
  EMAIL = 4;
  ALEATORIA = 5;
}

enum TipoConta {
  CONTA_DESCONHECIDA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

//---------------------------------------------------------

message FiltroPoPixId {
  string clienteId = 1;
  string pixId = 2;
}

message ChavePixUnicaConsultarRequest{
  oneof filtro {
    FiltroPoPixId pixId = 1;
    string chave = 2;
  }
}

//---------------------------------------------------------

message Titular {
  string nome = 1;
  string cpf = 2;
}

message ContaAssociada {
  string instituicao = 1;
  string agencia = 2;
  string numero = 3;
  string tipoConta = 4;
}

message ChavePixUnicaConsultarResponse{
  string pixId = 1;
  string clienteId = 2;
  string tipoChave = 3;
  string chave = 4;
  Titular titular = 5;
  ContaAssociada contaAssociada = 6;
  string dataRegistro = 7;
}

//---------------------------------------------------------

message ChavePixCadastrarRequest {
  string clienteId = 1;
  TipoChave tipoChave = 2;
  string chave = 3;
  TipoConta tipoConta = 4;
}

message ChavePixCadastrarResponse {
  string pixId = 1;
}

//---------------------------------------------------------

message ChavePixRemoverRequest {
  string clienteId = 1;
  string pixIdInterno = 2;
}

message ChavePixRemoverResponse {
  bool removida = 1;
}

//---------------------------------------------------------